--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             коммуникации".</p>
                     </div>
                     <div class="teachers__item teachers__item-3">
-                        <img src="img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
+                        <img src="../img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
                         <p class="teachers__name">Евгений Пак</p>
                         <p class="teachers__descr">Сетифицированный спеуиалист (диплом ОмГПУ, TTC в Кембридже, TESOL в
                             Лондоне). Имеет богатый опыт работы на английском языке: от обучения в языковых школах до
