--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         <section class="programm">
             <div class="container programm__container">
                 <picture>
-                    <source media="(max-width:1050px)" srcset="../img/bigben-phone.png">
-                    <source media="(max-width:1600px)" srcset="../img/bigben-desktop.png">
-                    <img src="../img/bigben.png" class="programm__img" alt="Бигбен">
+                    <source media="(max-width:1050px)" srcset="/img/bigben-phone.png">
+                    <source media="(max-width:1600px)" srcset="/img/bigben-desktop.png">
+                    <img src="/img/bigben.png" class="programm__img" alt="Бигбен">
                 </picture>
                 <div class="programm__about">
                     <h2 class="title programm__title">Что входит в&nbsp;стоимость</h2>
