--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             (Нью-Йорк) и Великобритании (Лондон).</p>
                     </div>
                     <div class="teachers__item teachers__item-2">
-                        <img src="../img/teacher-2.png" class="teachers__img" alt="Анастасия Левчук">
+                        <img src="img/teacher-2.png" class="teachers__img" alt="Анастасия Левчук">
                         <p class="teachers__name">Анастасия Левчук</p>
                         <p class="teachers__descr">Закончила Алтайскую Государственную педагогическую Академию по
                             специальности "теория и методика преподавания иностранных языков и культур".</p>
@@ -123,7 +123,7 @@
                             коммуникации".</p>
                     </div>
                     <div class="teachers__item teachers__item-3">
-                        <img src="../img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
+                        <img src="img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
                         <p class="teachers__name">Евгений Пак</p>
                         <p class="teachers__descr">Сетифицированный спеуиалист (диплом ОмГПУ, TTC в Кембридже, TESOL в
                             Лондоне). Имеет богатый опыт работы на английском языке: от обучения в языковых школах до
@@ -136,9 +136,9 @@
         <section class="programm">
             <div class="container programm__container">
                 <picture>
-                    <source media="(max-width:1050px)" srcset="/img/bigben-phone.png">
-                    <source media="(max-width:1600px)" srcset="/img/bigben-desktop.png">
-                    <img src="/img/bigben.png" class="programm__img" alt="Бигбен">
+                    <source media="(max-width:1050px)" srcset="img/bigben-phone.png">
+                    <source media="(max-width:1600px)" srcset="img/bigben-desktop.png">
+                    <img src="img/bigben.png" class="programm__img" alt="Бигбен">
                 </picture>
                 <div class="programm__about">
                     <h2 class="title programm__title">Что входит в&nbsp;стоимость</h2>
