--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="container header__container">
             <a href="#" class="logo header__logo">
                 <picture>
-                    <source media="(max-width:768px)" srcset="../img/logo.png">
-                    <source media="(max-width:1400px)" srcset="../img/logo-tablet.png">
-                    <img src="../img/logo.png" class="header__logo-img" alt="Логотип">
+                    <source media="(max-width:768px)" srcset="img/logo.png">
+                    <source media="(max-width:1400px)" srcset="img/logo-tablet.png">
+                    <img src="img/logo.png" class="header__logo-img" alt="Логотип">
                 </picture>
             </a>
             <div class="contact header__contact">
@@ -31,8 +31,8 @@
         <section class="hero">
             <div class="container hero__container">
                 <picture>
-                    <source media="(max-width:1600px)" srcset="../img/bus-tablet.png">
-                    <img src="../img/bus.png" class="hero__image" alt="Автобус">
+                    <source media="(max-width:1600px)" srcset="img/bus-tablet.png">
+                    <img src="img/bus.png" class="hero__image" alt="Автобус">
                 </picture>
                 <div class="hero__info">
                     <h1 class="visually-hidden">Ускоренный курс английского языка</h1>
@@ -54,10 +54,10 @@
                             гостинице с
                             трудом выговариваете,
                             какой номер вам нужен</p>
-                        <img src="../img/2section-1.png" class="situations__img situations__img-1" alt="Airport">
+                        <img src="img/2section-1.png" class="situations__img situations__img-1" alt="Airport">
                     </div>
                     <div class="situations__item situations__item-2">
-                        <img src="../img/2section-2.png" class="situations__img situations__img-2" alt="Compass">
+                        <img src="img/2section-2.png" class="situations__img situations__img-2" alt="Compass">
                         <p class="situations__descr situations__descr-2">Вы смогли спросить, до&nbsp;какой&nbsp;станции
                             метро нужно дойти, но не поняли, куда вас отправили</p>
                     </div>
@@ -65,10 +65,10 @@
                         <p class="situations__descr situations__descr-3">В аэропорту при любом подозрении
                             на задрежку, вы ищите представителя,
                             хоть как-то говорящего по-русски</p>
-                        <img src="../img/2section-3.png" class="situations__img situations__img-3" alt="Man">
+                        <img src="img/2section-3.png" class="situations__img situations__img-3" alt="Man">
                     </div>
                     <div class="situations__item situations__item-4">
-                        <img src="../img/2section-4.png" class="situations__img situations__img-4" alt="Feet">
+                        <img src="img/2section-4.png" class="situations__img situations__img-4" alt="Feet">
                         <p class="situations__descr situations__descr-4">Все это портит впечатление
                             от отдыха и отбивает желание посещать новые страны</p>
                     </div>
@@ -76,7 +76,7 @@
             </div>
         </section>
         <section class="about">
-            <img src="../img/3section.png" alt="Walk" class="about__img">
+            <img src="img/3section.png" alt="Walk" class="about__img">
             <div class="container about__container">
                 <h2 class="title about__title">Мы предусмотрели эти ситуации</h2>
                 <div class="about__list">
@@ -105,7 +105,7 @@
                 <h2 class="title teachers__title">Кто ведет курс</h2>
                 <div class="teachers__list">
                     <div class="teachers__item teachers__item-1">
-                        <img src="../img/teacher-1.png" class="teachers__img" alt="Алла Ристовская">
+                        <img src="img/teacher-1.png" class="teachers__img" alt="Алла Ристовская">
                         <p class="teachers__name">Алла Ристовская</p>
                         <p class="teachers__descr">Занимается преподаванием английского языка с 2007 года. За 7 лет
                             практики Алла занималась более чем с 80 студентами.</p>
@@ -189,9 +189,9 @@
                     </ul>
                 </div>
             </div>
-            <img src="../img/bagel-grey-big.svg" class="programm__bagel-grey" alt="">
-            <img src="../img/bagel-blue-big.svg" class="programm__bagel-blue" alt="">
-            <img src="../img/wave.svg" class="programm__wave" alt="">
+            <img src="img/bagel-grey-big.svg" class="programm__bagel-grey" alt="">
+            <img src="img/bagel-blue-big.svg" class="programm__bagel-blue" alt="">
+            <img src="img/wave.svg" class="programm__wave" alt="">
         </section>
         <section class="how">
             <div class="container how__container">
@@ -205,10 +205,10 @@
                                 спонтанных ситуациях,
                                 а&nbsp;не посредством зубрежки</p>
                         </div>
-                        <img src="../img/5section-1.png" class="how__item-img how__item-img-1" alt="Man">
+                        <img src="img/5section-1.png" class="how__item-img how__item-img-1" alt="Man">
                     </div>
                     <div class="how__item how__item-2">
-                        <img src="../img/5section-2.png" class="how__item-img how__item-img-2" alt="group">
+                        <img src="img/5section-2.png" class="how__item-img how__item-img-2" alt="group">
                         <div class="how__item-about how__item-about-2">
                             <p class="how__item-title how__item-title-2">Импровизация и диалоги</p>
                             <p class="how__item-descr how__item-descr-2">Форма импровизации позволяет подготовиться
@@ -222,10 +222,10 @@
                             <p class="how__item-descr how__item-descr-3">Прослушивание себя и профессионалов позволит
                                 научиться воспринимать чужую речь на слух</p>
                         </div>
-                        <img src="../img/5section-3.png" class="how__item-img how__item-img-3" alt="Listen">
+                        <img src="img/5section-3.png" class="how__item-img how__item-img-3" alt="Listen">
                     </div>
                     <div class="how__item how__item-4">
-                        <img src="../img/5section-4.png" class="how__item-img how__item-img-4" alt="Talk">
+                        <img src="img/5section-4.png" class="how__item-img how__item-img-4" alt="Talk">
                         <div class="how__item-about how__item-about-4">
                             <p class="how__item-title how__item-title-4">Повторение</p>
                             <p class="how__item-descr how__item-descr-4">Каждое следующее занятие включает в себя
@@ -246,7 +246,7 @@
                     <div class="reviews__swiper-container">
                         <div class="reviews__swiper-wrapper">
                             <div class="reviews__swiper-slide">
-                                <img src="../img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -260,7 +260,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="../img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="../img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -296,7 +296,7 @@
         </section>
         <section class="sign-up">
             <div class="container sign-up__container">
-                <img src="../img/airplane.png" class="sign-up__img" alt="Самолет">
+                <img src="img/airplane.png" class="sign-up__img" alt="Самолет">
                 <div class="sign-up__info">
                     <h2 class="title sign-up__title">Бесплатное пробное занятие</h2>
                     <p class="sign-up__descr">Приходите на бесплатное первое занятие по теме “аэропорт” и ощутите пользу
@@ -311,7 +311,7 @@
             <div class="footer__socials">
                 <div class="footer__logo">
                     <div class="logo footer__logo-link">
-                        <img src="../img/logo.png" class="footer__img" alt="Логотип">
+                        <img src="img/logo.png" class="footer__img" alt="Логотип">
                         <p class="footer__descr">Школа Английского Языка</p>
                         <span class="footer__address--tablet">г. Москва ул. Северная, 35</span>
                     </div>
